--- a/app.json
+++ b/app.json
@@ -4,7 +4,8 @@
     "pages/order/order",
     "pages/user/user",
     "pages/search/search",
-    "pages/logs/logs"
+    "pages/logs/logs",
+    "pages/shareCar/shareCar"
   ],
   "window": {
     "backgroundTextStyle": "black",
