增加共享车功能

--- a/app.json
+++ b/app.json
@@ -4,8 +4,7 @@
     "pages/order/order",
     "pages/user/user",
     "pages/search/search",
-    "pages/logs/logs",
-    "pages/shareCar/shareCar"
+    "pages/logs/logs"
   ],
   "window": {
     "backgroundTextStyle": "black",
