--- a/app.json
+++ b/app.json
@@ -1,11 +1,13 @@
 {
   "pages": [
+    
     "pages/index/index",
     "pages/user/user",
     "pages/order/order",
     "pages/search/search",
     "pages/logs/logs",
-    "pages/user/userInfo"
+    "pages/user/userInfo",
+    "pages/time/time"
   ],
   "window": {
     "backgroundTextStyle": "black",
