--- a/project.config.json
+++ b/project.config.json
@@ -13,7 +13,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "2.0.4",
 	"appid": "wx68c1017e4e3dea27",
-	"projectname": "hycx",
+	"projectname": "gfcx",
 	"debugOptions": {
 		"hidedInDevtools": []
 	},
